# horus

./: CHANGELOG.md  LICENSE  README.md  cabal.project.freeze  cropper.cabal  horus.cabal
.github/workflows/: main.yml
app/: Main.hs
src/: Storage.hs  Store.hs  Win.hs
src/UI/: Draw.hs  Events.hs  Movement.hs  Shoot.hs  State.hs  Zoom.hs
