cabal-version:   3.0
name:            cropper
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          azimut
maintainer:      azimut.github@protonmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    build-depends:    base ^>=4.17.2.1
    hs-source-dirs:   src
    default-language: Haskell2010

executable cropper
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        X11,
        safe-exceptions,
        managed,
        cairo,
        cropper

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite cropper-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        cropper
