cabal-version:   3.0
name:            horus
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          azimut
maintainer:      azimut.github@protonmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Win, UI.State, UI.Shoot, UI.Events, UI.Draw
    build-depends:    base ^>=4.17.2.1,
                      cairo,
                      managed,
                      safe-exceptions,
                      X11,
                      sdl2
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    UI.Zoom, UI.Movement

executable horus
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        horus,
        sdl2,
        -- vector,
        -- linear,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite horus-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        horus
