cabal-version:   3.0
name:            horus
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          azimut
maintainer:      azimut.github@protonmail.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Storage, Win, UI.State, UI.Shoot, UI.Events, UI.Draw, UI.Movement
    build-depends:    base ^>=4.17.2.1,
                      cairo,
                      directory,
                      filepath,
                      managed,
                      process,
                      safe-exceptions,
                      time,
                      X11,
                      sdl2
    hs-source-dirs:   src
    default-language: Haskell2010
    other-modules:    UI.Zoom

executable horus
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        horus,
        sdl2,
        -- vector,
        -- linear,

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite horus-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        horus
